--- a/index.html
+++ b/index.html
@@ -134,8 +134,23 @@
                         <span class="checkmark"></span>
                         Andres Escobar
                     </label><br>
-                    </div>
                 </div>
+            </div><br>
+            <div class="row border border-primary mx-2" id="question4">
+                <div class="col col-xs-12 col-lg-12">
+                    <h3 id="question1">Italy qualified for the World Cup in 2018.</h3>
+                    <label>
+                        <input type="radio" name="radio">
+                        <span class="checkmark"></span>
+                        True
+                    </label><br>
+                    <label>
+                        <input type="radio" name="radio">
+                        <span class="checkmark"></span>
+                        False
+                    </label><br>
+                </div>
+            </div>
         </div>
         <div class="total_score">
             <h1 id="guessedRight"></h1>
