just need to add comparison logic, really

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         Socrates (Brazil)
                     </label><br>
                     <label>
-                        <input type="radio" name="radio">
+                        <input type="radio" id="correct" name="radio">
                         <span class="checkmark"></span>
                         Gary Lineker (England)
                     </label><br>
@@ -130,7 +130,7 @@
                         Hernan Gaviria
                     </label><br>
                     <label>
-                        <input type="radio" name="radio">
+                        <input type="radio" id="correct" name="radio">
                         <span class="checkmark"></span>
                         Andres Escobar
                     </label><br>
@@ -145,7 +145,7 @@
                         True
                     </label><br>
                     <label>
-                        <input type="radio" name="radio">
+                        <input type="radio" id="correct" name="radio">
                         <span class="checkmark"></span>
                         False
                     </label><br>
@@ -153,7 +153,7 @@
             </div>
         </div>
         <div class="total_score">
-            <h1 id="guessedRight"></h1>
+            <h1 id="guessedRight">THIS IS A TEST!!!!!!</h1>
             <h1 id="guessedWrong"></h1>
         </div>
     </div>
