--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>World Cup Trivia</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
@@ -40,22 +41,22 @@
                 <div class="col col-xs-12 col-lg-12">
                     <h3 id="question1 text-center">When was the first world cup played?</h3>
                     <label>
-                        <input type="radio" name="radio">
-                        <span class="checkmark"></span>
+                        <input type="radio" name="question1" id="choice1q1" class="wrongAns">
                         1904
+                        <span class="checkmark"></span>
                     </label><br>
                     <label>
-                        <input type="radio" name="radio">
+                        <input type="radio" name="question1" id="choice2q1" class="wrongAns">
                         <span class="checkmark"></span>
                         1975
                     </label><br>
                     <label>
-                        <input type="radio" name="radio">
+                        <input type="radio" name="question1" id="choice3q1" class="wrongAns">
                         <span class="checkmark"></span>
                         1890
                     </label><br>
                     <label>
-                    <input type="radio" name="radio">
+                    <input type="radio" name="question1" id="choice4q1" class="rightAns">
                     <span class="checkmark"></span>
                     1930
                     </label><br>
@@ -65,22 +66,22 @@
                 <div class="col col-xs-12 col-lg-12">
                     <h3>Who was the top goal scorer at the 1986 World Cup finals?</h3>
                     <label>
-                        <input type="radio" name="radio">
+                        <input type="radio" name="question2" id="choice1q2" class="wrongAns">
                         <span class="checkmark"></span>
                         Diego Maradona (Argentina)
                     </label><br>
                     <label>
-                        <input type="radio" name="radio">
+                        <input type="radio" name="question2" id="choice2q2" class="wrongAns">
                         <span class="checkmark"></span>
                         Rudi Voller (West Germany)
                     </label><br>
                     <label>
-                        <input type="radio" name="radio">
+                        <input type="radio" name="question2" id="choice3q2" class="wrongAns">
                         <span class="checkmark"></span>
                         Socrates (Brazil)
                     </label><br>
                     <label>
-                        <input type="radio" id="correct" name="radio">
+                        <input type="radio" name="question2" id="choice4q2" class="rightAns">
                         <span class="checkmark"></span>
                         Gary Lineker (England)
                     </label><br>
@@ -90,22 +91,22 @@
                 <div class="col col-xs-12 col-lg-12">
                     <h3 id="question1">This team won the 2014 World Cup in Brazil:</h3>
                     <label>
-                        <input type="radio" name="radio">
+                        <input type="radio" name="question3" id="choice4q2" class="wrongAns">
                         <span class="checkmark"></span>
                         France
                     </label><br>
                     <label>
-                        <input type="radio" name="radio">
+                        <input type="radio" name="question3" id="choice4q2" class="wrongAns">
                         <span class="checkmark"></span>
                         Spain
                     </label><br>
                     <label>
-                        <input type="radio" name="radio">
+                        <input type="radio" name="question3" id="choice4q2" class="rightAns">
                         <span class="checkmark"></span>
                         Germany
                     </label><br>
                     <label>
-                        <input type="radio" name="radio">
+                        <input type="radio" name="question3" id="choice4q2" class="wrongAns">
                         <span class="checkmark"></span>
                         Italy
                     </label><br>
@@ -113,48 +114,73 @@
             </div><br>
             <div class="row border border-primary mx-2" id="question4">
                 <div class="col col-xs-12 col-lg-12">
-                    <h3 id="question1">Which Colombian player scored an own goal in a group stage match against the USA, at the 1994 World Cup?</h3>
+                    <h3 id="question1">Which Colombian player scored an own goal in a group stage match against the USA at the 1994 World Cup and was murdered upon returning to his home country?</h3>
                     <label>
-                        <input type="radio" name="radio">
+                        <input type="radio" name="question4" id="choice4q2" class="wrongAns">
                         <span class="checkmark"></span>
                         Adolfo Valencia
                     </label><br>
                     <label>
-                        <input type="radio" name="radio">
+                        <input type="radio" name="question4" id="choice4q2" class="wrongAns">
                         <span class="checkmark"></span>
                         John Harold Lozano
                     </label><br>
                     <label>
-                        <input type="radio" name="radio">
+                        <input type="radio" name="question4" id="choice4q2" class="wrongAns">
                         <span class="checkmark"></span>
                         Hernan Gaviria
                     </label><br>
                     <label>
-                        <input type="radio" id="correct" name="radio">
+                        <input type="radio" name="question4" id="choice4q2" class="rightAns">
                         <span class="checkmark"></span>
                         Andres Escobar
                     </label><br>
                 </div>
             </div><br>
-            <div class="row border border-primary mx-2" id="question4">
+            <div class="row border border-primary mx-2" id="question5">
                 <div class="col col-xs-12 col-lg-12">
                     <h3 id="question1">Italy qualified for the World Cup in 2018.</h3>
                     <label>
-                        <input type="radio" name="radio">
+                        <input type="radio" name="question5" id="choice4q2" class="wrongAns">
                         <span class="checkmark"></span>
                         True
                     </label><br>
                     <label>
-                        <input type="radio" id="correct" name="radio">
+                        <input type="radio" name="question5" id="choice4q2" class="rightAns">
                         <span class="checkmark"></span>
                         False
+                    </label>
+                </div>
+            </div><br>
+            <div class="row border border-primary mx-2" id="question6">
+                <div class="col col-xs-12 col-lg-12">
+                    <h3 id="question1">How many World Cups have been won by the host country?</h3>
+                    <label>
+                        <input type="radio" name="question6" id="choice4q2" class="wrongAns">
+                        <span class="checkmark"></span>
+                        12
+                    </label><br>
+                    <label>
+                        <input type="radio" name="question6" id="choice4q2" class="rightAns">
+                        <span class="checkmark"></span>
+                        6
+                    </label><br>
+                    <label>
+                        <input type="radio" name="question6" id="choice4q2" class="wrongAns">
+                        <span class="checkmark"></span>
+                        2
+                    </label><br>
+                    <label>
+                        <input type="radio" id="correct" name="question6" id="choice4q2" class="wrongAns">
+                        <span class="checkmark"></span>
+                        9
                     </label><br>
                 </div>
-            </div>
+            </div><br>
         </div>
         <div class="total_score">
-            <h1 id="guessedRight">THIS IS A TEST!!!!!!</h1>
-            <h1 id="guessedWrong"></h1>
+            <h4 id="guessedRight"></h1>
+            <h4 id="guessedWrong"></h4>
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
