--- a/index.html
+++ b/index.html
@@ -41,139 +41,112 @@
                 <div class="col col-xs-12 col-lg-12">
                     <h3 id="question1 text-center">When was the first world cup played?</h3>
                     <label>
-                        <input type="radio" name="question1" id="choice1q1" class="wrongAns">
-                        1904
-                        <span class="checkmark"></span>
+                        <input type="radio" name="q1" value="1904">1904
                     </label><br>
                     <label>
-                        <input type="radio" name="question1" id="choice2q1" class="wrongAns">
-                        <span class="checkmark"></span>
-                        1975
+                        <input type="radio" name="q1" value="1975">1975
                     </label><br>
                     <label>
-                        <input type="radio" name="question1" id="choice3q1" class="wrongAns">
-                        <span class="checkmark"></span>
-                        1890
+                        <input type="radio" name="q1" value="1890">1890
                     </label><br>
                     <label>
-                    <input type="radio" name="question1" id="choice4q1" class="rightAns">
-                    <span class="checkmark"></span>
-                    1930
+                    <input type="radio" name="q1" value="1930">1930
                     </label><br>
                 </div>
             </div><br>
-            <div class="row border border-primary mx-2" id="question2">
+            <div class="row border border-primary mx-2">
                 <div class="col col-xs-12 col-lg-12">
                     <h3>Who was the top goal scorer at the 1986 World Cup finals?</h3>
                     <label>
-                        <input type="radio" name="question2" id="choice1q2" class="wrongAns">
-                        <span class="checkmark"></span>
-                        Diego Maradona (Argentina)
+                        <input type="radio" name="q2" value="Gary Lineker">Gary Lineker
                     </label><br>
                     <label>
-                        <input type="radio" name="question2" id="choice2q2" class="wrongAns">
-                        <span class="checkmark"></span>
-                        Rudi Voller (West Germany)
+                        <input type="radio" name="q2" value="Rudi Voller">Rudi Voller
                     </label><br>
                     <label>
-                        <input type="radio" name="question2" id="choice3q2" class="wrongAns">
-                        <span class="checkmark"></span>
-                        Socrates (Brazil)
+                        <input type="radio" name="q2" value="Socrates">Socrates
                     </label><br>
                     <label>
-                        <input type="radio" name="question2" id="choice4q2" class="rightAns">
-                        <span class="checkmark"></span>
-                        Gary Lineker (England)
+                        <input type="radio" name="q2" value="Diego Maradona">Diego Maradona
                     </label><br>
                 </div>
             </div><br>
-            <div class="row border border-primary mx-2" id="question3">
+            <div class="row border border-primary mx-2">
                 <div class="col col-xs-12 col-lg-12">
-                    <h3 id="question1">This team won the 2014 World Cup in Brazil:</h3>
+                    <h3>This team won the 2014 World Cup in Brazil:</h3>
                     <label>
-                        <input type="radio" name="question3" id="choice4q2" class="wrongAns">
-                        <span class="checkmark"></span>
-                        France
+                        <input type="radio" name="q3" value="France">France
                     </label><br>
                     <label>
-                        <input type="radio" name="question3" id="choice4q2" class="wrongAns">
-                        <span class="checkmark"></span>
-                        Spain
+                        <input type="radio" name="q3" value="Spain">Spain
                     </label><br>
                     <label>
-                        <input type="radio" name="question3" id="choice4q2" class="rightAns">
-                        <span class="checkmark"></span>
-                        Germany
+                        <input type="radio" name="q3" value="Germany">Germany
                     </label><br>
                     <label>
-                        <input type="radio" name="question3" id="choice4q2" class="wrongAns">
-                        <span class="checkmark"></span>
-                        Italy
+                        <input type="radio" name="q3" value="Italy">Italy
                     </label><br>
                 </div>
             </div><br>
-            <div class="row border border-primary mx-2" id="question4">
+            <div class="row border border-primary mx-2">
                 <div class="col col-xs-12 col-lg-12">
-                    <h3 id="question1">Which Colombian player scored an own goal in a group stage match against the USA at the 1994 World Cup and was murdered upon returning to his home country?</h3>
+                    <h3>Which Colombian player scored an own goal in a group stage match against the USA at the 1994 World Cup and was murdered upon returning to his home country?</h3>
                     <label>
-                        <input type="radio" name="question4" id="choice4q2" class="wrongAns">
-                        <span class="checkmark"></span>
-                        Adolfo Valencia
+                        <input type="radio" name="q4" value="Adolfo Valencia">Adolfo Valencia
                     </label><br>
                     <label>
-                        <input type="radio" name="question4" id="choice4q2" class="wrongAns">
-                        <span class="checkmark"></span>
-                        John Harold Lozano
+                        <input type="radio" name="q4" value="John Harold Lozano">John Harold Lozano
                     </label><br>
                     <label>
-                        <input type="radio" name="question4" id="choice4q2" class="wrongAns">
-                        <span class="checkmark"></span>
-                        Hernan Gaviria
+                        <input type="radio" name="q4" value="Hernan Gaviria">Hernan Gaviria
                     </label><br>
                     <label>
-                        <input type="radio" name="question4" id="choice4q2" class="rightAns">
-                        <span class="checkmark"></span>
-                        Andres Escobar
+                        <input type="radio" name="q4" value="Andres Escobar">Andres Escobar
                     </label><br>
                 </div>
             </div><br>
-            <div class="row border border-primary mx-2" id="question5">
+            <div class="row border border-primary mx-2">
                 <div class="col col-xs-12 col-lg-12">
-                    <h3 id="question1">Italy qualified for the World Cup in 2018.</h3>
+                    <h3>Italy qualified for the World Cup in 2018.</h3>
                     <label>
-                        <input type="radio" name="question5" id="choice4q2" class="wrongAns">
-                        <span class="checkmark"></span>
-                        True
+                        <input type="radio" name="q5" value="True">True
                     </label><br>
                     <label>
-                        <input type="radio" name="question5" id="choice4q2" class="rightAns">
-                        <span class="checkmark"></span>
-                        False
+                        <input type="radio" name="q5" value="False">False
                     </label>
                 </div>
             </div><br>
-            <div class="row border border-primary mx-2" id="question6">
+            <div class="row border border-primary mx-2">
                 <div class="col col-xs-12 col-lg-12">
-                    <h3 id="question1">How many World Cups have been won by the host country?</h3>
+                    <h3>How many World Cups have been won by the host country?</h3>
                     <label>
-                        <input type="radio" name="question6" id="choice4q2" class="wrongAns">
-                        <span class="checkmark"></span>
-                        12
+                        <input type="radio" name="q6" value="12">12
                     </label><br>
                     <label>
-                        <input type="radio" name="question6" id="choice4q2" class="rightAns">
-                        <span class="checkmark"></span>
-                        6
+                        <input type="radio" name="q6" value="6">6
                     </label><br>
                     <label>
-                        <input type="radio" name="question6" id="choice4q2" class="wrongAns">
-                        <span class="checkmark"></span>
-                        2
+                        <input type="radio" name="q6" value="2">2
                     </label><br>
                     <label>
-                        <input type="radio" id="correct" name="question6" id="choice4q2" class="wrongAns">
-                        <span class="checkmark"></span>
-                        9
+                        <input type="radio" name="q6" value="9">9
+                    </label><br>
+                </div>
+            </div><br>
+            <div class="row border border-primary mx-2">
+                <div class="col col-xs-12 col-lg-12">
+                    <h3>Only one country has been in every World Cup Since 1930. Who is it?</h3>
+                    <label>
+                        <input type="radio" name="q7" value="Brazil">Brazil
+                    </label><br>
+                    <label>
+                        <input type="radio" name="q7" value="Germany">Germany
+                    </label><br>
+                    <label>
+                        <input type="radio" name="q7" value="England">England
+                    </label><br>
+                    <label>
+                        <input type="radio" name="q7" value="Argentina">Argentina
                     </label><br>
                 </div>
             </div><br>
@@ -181,6 +154,8 @@
         <div class="total_score">
             <h4 id="guessedRight"></h1>
             <h4 id="guessedWrong"></h4>
+            <h4 id="unanswered"></h4>
+            <button type="button" id="restart_button" value="TRY AGAIN?" class="btn btn-lg btn-primary" onClick="window.location.reload()"><i class="fas fa-futbol"></i>TRY AGAIN?</button>
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
