--- a/index.html
+++ b/index.html
@@ -150,8 +150,9 @@
                     </label><br>
                 </div>
             </div><br>
-        </div>
-        <div class="total_score">
+        </div><br>
+        <div class="total_score border border-primary p-5">
+            <h2>TIME'S UP!</h2>
             <h4 id="guessedRight"></h1>
             <h4 id="guessedWrong"></h4>
             <h4 id="unanswered"></h4>
