added a picture and hid it on mobile

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
             </div>     
         </div>
         <div class="row text-center">
+                <div class="col col-lg-12 d-none d-sm-block">
+                    <img class="img-responsive" src="assets/images/FWC2018.jpg">        
+                </div>    
             <div class="col col-xs-12 col-lg-12">
                 <h2>In honor of the 2018 FIFA World Cup in Russia!</h2>
             </div>    
@@ -150,9 +153,8 @@
                     </label><br>
                 </div>
             </div><br>
-        </div><br>
-        <div class="total_score border border-primary p-5">
-            <h2>TIME'S UP!</h2>
+        </div>
+        <div class="total_score">
             <h4 id="guessedRight"></h1>
             <h4 id="guessedWrong"></h4>
             <h4 id="unanswered"></h4>
