this is really the final

--- a/index.html
+++ b/index.html
@@ -154,7 +154,8 @@
                 </div>
             </div><br>
         </div>
-        <div class="total_score">
+        <div class="total_score border border-primary m-2">
+            <h2><strong>TIME'S UP!</strong></h2>
             <h4 id="guessedRight"></h1>
             <h4 id="guessedWrong"></h4>
             <h4 id="unanswered"></h4>
