--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
         <div class="row text-center">
                 <div class="col col-lg-12 d-none d-sm-block">
-                    <img class="img-responsive" src="assets/images/FWC2018.jpg">        
+                    <img class="img img-responsive" src="assets/images/FWC2018.jpg">        
                 </div>    
             <div class="col col-xs-12 col-lg-12">
                 <h2>In honor of the 2018 FIFA World Cup in Russia!</h2>
