--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,6 +14,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
     <link href="https://fonts.googleapis.com/css?family=Play|Press+Start+2P" rel="stylesheet">
 </head>
+
 <body>
     <div class="container">
         <div class="row text-center">
@@ -200,6 +202,13 @@
                 <h4 id="unanswered"></h4>
                 <button type="button" id="restart_button" value="TRY AGAIN?" class="btn btn-lg btn-primary" onClick="window.location.reload()">
                     <i class="fas fa-futbol"></i>TRY AGAIN?</button>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-xs-12 col-lg-12">
+            <p class="text-white">Created with Love by
+                <a class="text-white" href="https://www.github.com/patlehmann1" target="_blank">Patrick Lehmann</a>
+            </p>
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
